[package]
name = "llm-ollama"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = []
description = """
llm-ollama description.
"""
homepage = "https://github.com/kilork/llm-ollama"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/llm-ollama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
